--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,13 @@
     padding: 0;
 }
 
+#parameters,
 #grid {
-    margin: 50px auto;
+    margin: 25px auto;
     width: 700px;
+}
+
+#grid {
     height: 700px;
     border: 3px solid black;
     display: flex;
@@ -13,7 +17,7 @@
 }
 
 #grid div {
-    flex: 1 0 6.25%;
+    /*flex: 1 0 6.25%;*/
     border: 1px solid lightgrey;
     margin: -1px; /* To counter the 1px border and not mess with the grid alignement */
 }
